--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tempreact",
-  "homepage": "https://AbhijeetDhekane21.github.io/WeatherApp",
+  "homepage": "https://AbhijeetDhekane.github.io/WeatherApp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
